Fixed webkit transition flicker and reworked randomization to ensure that all boards are solvable

--- a/assets/css/rotator.css
+++ b/assets/css/rotator.css
@@ -200,9 +200,10 @@ ul {
 }
 
 		.animated {
-		  -moz-transition: transform 0.15s, background-color 0.15s;
-		  -o-transition: transform 0.15s, background-color 0.15s;
-		  -webkit-transition: transform 0.15s, background-color 0.15s;
+		  -moz-transition: -moz-transform 0.15s, background-color 0.15s;
+		  -o-transition: -o-transform 0.15s, background-color 0.15s;
+		  -webkit-backface-visibility: hidden;
+		  -webkit-transition: -webkit-transform 0.15s, background-color 0.15s;
 			transition: transform 0.15s, background-color 0.15s;
 		}
 
